test/python/stackql_test_tooling/flask/gcp/templates/route_10_template.json
{
    "keyRings": [
        {
            "name": "projects/testing-project-two/locations/australia-southeast2/keyRings/big-m-testing-two",
            "createTime": "2022-02-02T02:02:02.02000000Z"
        }
    ],
    "totalSize": 1
}
