test/python/stackql_test_tooling/flask/gcp/templates/route_16_template.json
{
    "access_token": "some-access-token",
    "token_type": "access_token",
    "id_token": "eyJhbGciOiJSUzI1NiIsImN0eSI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwiaWF0IjoxNjAzMzc2MDExLCJleHAiOjExNjI4NTY1MzY0LCJhdWQiOiJhdWQteCIsImlzcyI6Imdvb2dsZSIsInNjb3BlIjoiZ29vZ2xlYXBpcyJ9.g_MHGMGbRt0MZaOyKPA7zQNrYRDgabBJwEzUGlCHlWlidWnYSG9mo5YixHwk1AfeDsRTnxxyT9Ki1mSppamKbS_QHj-o54PMLibP6jcQV4aLxwug9cKbzIvQTndWPm41gBT4Bxfip4ZI9DZUtVZ4nv89reDdmZ_WLG_HuDw-3p4E5L_5iIJGGEnfyko8Da1LiHZg6tNGzpmMyjxUhocvUdM5iEHeppkLlGlu9Lw38UVxUCvskKy6WRCnLU7uCZxeoA-Ah8jg-Ie6IPdKm2UvqUflQbfG-Ga7LqzMxSVE_KvRD9_02 [...]
    "expires_in": 3600
}
