test/python/stackql_test_tooling/flask/gcp/templates/route_17_template.json
{
    "subnetworks": [
        {
            "subnetwork": "projects/testing-project/regions/australia-southeast1/subnetworks/sn-02",
            "network": "projects/testing-project/global/networks/vpc-01",
            "ipCidrRange": "10.0.1.0/24"
        },
        {
            "subnetwork": "projects/testing-project/regions/australia-southeast1/subnetworks/sn-01",
            "network": "projects/testing-project/global/networks/vpc-01",
            "ipCidrRange": "10.0.0.0/24"
        }
    ]
}
