test/python/stackql_test_tooling/flask/gcp/templates/route_1_template.json
{
    "cryptoKeys": [
        {
            "name": "projects/testing-project-three/locations/global/keyRings/testing/cryptoKeys/testing-three-demo-key",
            "primary": {
                "name": "projects/testing-project-three/locations/global/keyRings/testing/cryptoKeys/testing-three-demo-key/cryptoKeyVersions/6",
                "state": "ENABLED",
                "createTime": "2024-05-22T14:00:00.000000000Z",
                "protectionLevel": "SOFTWARE",
                "algorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
                "generateTime": "2024-05-22T14:00:00.000000000Z"
            },
            "purpose": "ENCRYPT_DECRYPT",
            "createTime": "2023-02-04T03:03:03.000000000Z",
            "nextRotationTime": "2025-03-03T14:00:00.000000000Z",
            "rotationPeriod": "7776000s",
            "versionTemplate": {
                "protectionLevel": "SOFTWARE",
                "algorithm": "GOOGLE_SYMMETRIC_ENCRYPTION"
            },
            "destroyScheduledDuration": "86400s"
        },
        {
            "name": "projects/testing-project-three/locations/global/keyRings/testing/cryptoKeys/testing-three-demo-key-three",
            "primary": {
                "name": "projects/testing-project-three/locations/global/keyRings/testing/cryptoKeys/testing-three-demo-key-three/cryptoKeyVersions/6",
                "state": "ENABLED",
                "createTime": "2024-05-22T14:00:00.000000000Z",
                "protectionLevel": "SOFTWARE",
                "algorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
                "generateTime": "2024-05-22T14:00:00.000000000Z"
            },
            "purpose": "ENCRYPT_DECRYPT",
            "createTime": "2023-02-04T03:03:03.000000000Z",
            "nextRotationTime": "2025-03-03T14:00:00.000000000Z",
            "rotationPeriod": "7776000s",
            "versionTemplate": {
                "protectionLevel": "SOFTWARE",
                "algorithm": "GOOGLE_SYMMETRIC_ENCRYPTION"
            },
            "destroyScheduledDuration": "86400s"
        },
        {
            "name": "projects/testing-project-three/locations/global/keyRings/testing/cryptoKeys/testing-three-demo-key-three",
            "primary": {
                "name": "projects/testing-project-three/locations/global/keyRings/testing/cryptoKeys/testing-three-demo-key-three/cryptoKeyVersions/6",
                "state": "ENABLED",
                "createTime": "2024-05-22T14:00:00.000000000Z",
                "protectionLevel": "SOFTWARE",
                "algorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
                "generateTime": "2024-05-22T14:00:00.000000000Z"
            },
            "purpose": "ENCRYPT_DECRYPT",
            "createTime": "2023-02-04T03:03:03.000000000Z",
            "nextRotationTime": "2025-03-03T14:00:00.000000000Z",
            "rotationPeriod": "7776000s",
            "versionTemplate": {
                "protectionLevel": "SOFTWARE",
                "algorithm": "GOOGLE_SYMMETRIC_ENCRYPTION"
            },
            "destroyScheduledDuration": "86400s"
        }
    ],
    "totalSize": 3
}
